changing the paasword

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "ts-node-dev": "^2.0.0",
